--- a/HelpMeWatch/Base.lproj/Main.storyboard
+++ b/HelpMeWatch/Base.lproj/Main.storyboard
@@ -19,34 +19,50 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rrA-0W-fT0">
-                                <rect key="frame" x="40" y="40" width="520" height="400"/>
+                                <rect key="frame" x="40" y="40" width="520" height="410"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uX5-Of-eh5">
-                                <rect key="frame" x="259" y="519" width="82" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uX5-Of-eh5" customClass="FUIButton">
+                                <rect key="frame" x="200" y="540" width="200" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="La1-SK-Cno"/>
-                                    <constraint firstAttribute="width" constant="82" id="rIv-DW-6Qf"/>
+                                    <constraint firstAttribute="height" constant="40" id="La1-SK-Cno"/>
+                                    <constraint firstAttribute="width" constant="200" id="rIv-DW-6Qf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <state key="normal" title="Hit Me!"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Hit Me!">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="refresh:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eYC-8p-OTF"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hhhh" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6i5-nq-1pd">
+                                <rect key="frame" x="40" y="480" width="520" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="84R-Pd-UT6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.93755251177489496" blue="0.85670625460187089" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="rrA-0W-fT0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="4tq-VD-n0s"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rrA-0W-fT0" secondAttribute="trailing" constant="20" id="6Ga-nM-3YW"/>
                             <constraint firstAttribute="height" secondItem="rrA-0W-fT0" secondAttribute="height" multiplier="3:2" id="A4v-jy-f1K"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uX5-Of-eh5" secondAttribute="bottom" constant="60" id="ASv-Rb-wgG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uX5-Of-eh5" secondAttribute="bottom" constant="20" id="ASv-Rb-wgG"/>
                             <constraint firstItem="rrA-0W-fT0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bgk-u3-fUV"/>
                             <constraint firstItem="rrA-0W-fT0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="IV5-a8-6sS"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rrA-0W-fT0" secondAttribute="bottom" constant="150" id="Iiw-hz-5QL"/>
+                            <constraint firstItem="6i5-nq-1pd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="UYm-j5-XJH"/>
                             <constraint firstItem="uX5-Of-eh5" firstAttribute="top" secondItem="rrA-0W-fT0" secondAttribute="bottom" constant="60" id="VtA-Me-C6O"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6i5-nq-1pd" secondAttribute="trailing" constant="20" id="ayG-Ch-2Gw"/>
+                            <constraint firstItem="6i5-nq-1pd" firstAttribute="top" secondItem="rrA-0W-fT0" secondAttribute="bottom" constant="30" id="eJ8-GZ-VXG"/>
                             <constraint firstItem="uX5-Of-eh5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pic-hb-dlc"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="A4v-jy-f1K"/>
                                 <exclude reference="Bgk-u3-fUV"/>
                                 <exclude reference="VtA-Me-C6O"/>
                             </mask>
@@ -55,6 +71,7 @@
                     <connections>
                         <outlet property="hitMeButton" destination="uX5-Of-eh5" id="NWH-mw-mDP"/>
                         <outlet property="posterImage" destination="rrA-0W-fT0" id="GDL-Go-ZYQ"/>
+                        <outlet property="showTitleLabel" destination="6i5-nq-1pd" id="Dz1-iH-mHZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
