--- a/HelpMeWatch/FilterView.xib
+++ b/HelpMeWatch/FilterView.xib
@@ -4,7 +4,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterView" customModule="HelpMeWatch" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterView" customModule="HelpMeWatch" customModuleProvider="target">
+            <connections>
+                <outlet property="applyButton" destination="a2Z-n3-Wyl" id="7rR-se-nFN"/>
+                <outlet property="yearReleasedField" destination="IVd-AI-Qty" id="fgP-Bk-I10"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -16,7 +21,7 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2015" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IVd-AI-Qty">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IVd-AI-Qty">
                     <rect key="frame" x="128" y="6" width="63" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="jYX-i0-rtL"/>
@@ -25,12 +30,24 @@
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2Z-n3-Wyl" customClass="FUIButton">
+                    <rect key="frame" x="245.5" y="560" width="110" height="35"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="x3g-eo-5Cr"/>
+                        <constraint firstAttribute="height" constant="35" id="yBD-AA-7b9"/>
+                    </constraints>
+                    <state key="normal" title="Apply Filters">
+                        <color key="titleColor" red="0.18670486309342971" green="0.22520688835730485" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="3Vb-Hq-2Gp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="1dV-uD-Jvu"/>
                 <constraint firstItem="3Vb-Hq-2Gp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="9uE-o7-kGt"/>
                 <constraint firstItem="IVd-AI-Qty" firstAttribute="leading" secondItem="3Vb-Hq-2Gp" secondAttribute="trailing" constant="5" id="KVx-ZS-rKk"/>
+                <constraint firstItem="a2Z-n3-Wyl" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="NoX-zm-zWG"/>
+                <constraint firstAttribute="bottom" secondItem="a2Z-n3-Wyl" secondAttribute="bottom" constant="5" id="VR2-Jw-5WY"/>
                 <constraint firstItem="IVd-AI-Qty" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="xR0-cE-I2o"/>
             </constraints>
             <point key="canvasLocation" x="475" y="378"/>
