Handled case where no results are available for search

--- a/HelpMeWatch/FilterView.xib
+++ b/HelpMeWatch/FilterView.xib
@@ -28,7 +28,7 @@
                         <constraint firstAttribute="width" constant="63" id="pK9-iI-w27"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2Z-n3-Wyl" customClass="FUIButton">
                     <rect key="frame" x="245.5" y="560" width="110" height="35"/>
