--- a/HelpMeWatch/FilterView.xib
+++ b/HelpMeWatch/FilterView.xib
@@ -7,7 +7,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterView" customModule="HelpMeWatch" customModuleProvider="target">
             <connections>
                 <outlet property="applyButton" destination="a2Z-n3-Wyl" id="7rR-se-nFN"/>
+                <outlet property="changeGenreButton" destination="ajh-sH-hLX" id="Nts-UB-wXW"/>
+                <outlet property="dropDownView" destination="PbE-JP-o21" id="4qS-dv-yJr"/>
                 <outlet property="yearReleasedField" destination="IVd-AI-Qty" id="fgP-Bk-I10"/>
+                <outlet property="yearReleasedLabel" destination="3Vb-Hq-2Gp" id="DJ7-aV-z8k"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,22 +19,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year Released:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Vb-Hq-2Gp">
-                    <rect key="frame" x="10" y="10" width="113" height="20.5"/>
+                    <rect key="frame" x="409" y="10" width="113" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IVd-AI-Qty">
-                    <rect key="frame" x="128" y="6" width="63" height="30"/>
+                    <rect key="frame" x="527" y="6" width="63" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="jYX-i0-rtL"/>
                         <constraint firstAttribute="width" constant="63" id="pK9-iI-w27"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2Z-n3-Wyl" customClass="FUIButton">
-                    <rect key="frame" x="245.5" y="560" width="110" height="35"/>
+                    <rect key="frame" x="245" y="560" width="110" height="35"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="110" id="x3g-eo-5Cr"/>
                         <constraint firstAttribute="height" constant="35" id="yBD-AA-7b9"/>
@@ -40,16 +43,68 @@
                         <color key="titleColor" red="0.18670486309342971" green="0.22520688835730485" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y5x-05-EfT">
+                    <rect key="frame" x="10" y="10" width="51" height="20.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="51" id="dtA-Tj-oet"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="dtA-Tj-oet"/>
+                        </mask>
+                    </variation>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PbE-JP-o21">
+                    <rect key="frame" x="66" y="6" width="130" height="30"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajh-sH-hLX" customClass="FUIButton">
+                            <rect key="frame" x="13" y="0.0" width="105" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="GpK-64-pIf"/>
+                                <constraint firstAttribute="width" constant="105" id="s1t-9F-HmD"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                            <state key="normal" title="ALL">
+                                <color key="titleColor" red="0.074052212181866084" green="0.64248830063345186" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="changeGenre:" destination="-1" eventType="touchUpInside" id="XyQ-M8-nav"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="ajh-sH-hLX" firstAttribute="centerY" secondItem="PbE-JP-o21" secondAttribute="centerY" id="CWD-Fl-wCM"/>
+                        <constraint firstItem="ajh-sH-hLX" firstAttribute="centerX" secondItem="PbE-JP-o21" secondAttribute="centerX" id="O9T-uc-aY2"/>
+                        <constraint firstAttribute="height" constant="30" id="tCr-4E-a0E"/>
+                        <constraint firstAttribute="width" constant="130" id="y7f-ia-oh8"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="y5x-05-EfT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="0IY-sG-iXd"/>
                 <constraint firstItem="3Vb-Hq-2Gp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="1dV-uD-Jvu"/>
                 <constraint firstItem="3Vb-Hq-2Gp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="9uE-o7-kGt"/>
+                <constraint firstItem="y5x-05-EfT" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="IKc-Oi-lMS"/>
                 <constraint firstItem="IVd-AI-Qty" firstAttribute="leading" secondItem="3Vb-Hq-2Gp" secondAttribute="trailing" constant="5" id="KVx-ZS-rKk"/>
+                <constraint firstAttribute="trailing" secondItem="IVd-AI-Qty" secondAttribute="trailing" constant="10" id="MKE-hb-um8"/>
                 <constraint firstItem="a2Z-n3-Wyl" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="NoX-zm-zWG"/>
                 <constraint firstAttribute="bottom" secondItem="a2Z-n3-Wyl" secondAttribute="bottom" constant="5" id="VR2-Jw-5WY"/>
+                <constraint firstItem="PbE-JP-o21" firstAttribute="leading" secondItem="y5x-05-EfT" secondAttribute="trailing" constant="5" id="swO-me-bDy"/>
+                <constraint firstItem="IVd-AI-Qty" firstAttribute="leading" secondItem="3Vb-Hq-2Gp" secondAttribute="trailing" constant="5" id="uUe-f6-zmz"/>
+                <constraint firstItem="PbE-JP-o21" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="vVu-Xi-zZB"/>
                 <constraint firstItem="IVd-AI-Qty" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="xR0-cE-I2o"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="9uE-o7-kGt"/>
+                    <exclude reference="KVx-ZS-rKk"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="475" y="378"/>
         </view>
     </objects>
